section_find_store

--- a/index.html
+++ b/index.html
@@ -146,5 +146,18 @@
         </div>
     </div>
    </section>
+   <section id="find_store">
+    <div class="container">
+        <div class="left">
+            <img src="images/store_KO_hero.webp" alt=""/>
+        </div>
+        <div class="right">
+            <h5>UP CLOSE AND PERSONAL</h5>
+            <h3>Experience in store</h3>
+            <p>Come by one of our stores to hear, see and feel Bang & Olufsen yourself.</p>
+            <a href="" class="button">Find store </a>
+        </div>
+    </div>
+   </section>
 </body>
 </html>
