section_join_start

--- a/index.html
+++ b/index.html
@@ -159,5 +159,36 @@
         </div>
     </div>
    </section>
+
+   <!-- section find store end''' -->
+
+   <section id="join">
+    <div class="container">
+        <div class="left">
+            <img src="images/join.png" alt="">
+        </div>
+        <div class="right">
+            <div class="top">
+                <div class="up">
+                    <h3>THE HOUSE OF BANG & OLUFSEN</h3>
+                    <h2>Join our global community for exclusive benefits and news about</h2>
+                </div>
+                <div class="down">
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+            <div class="middle"></div>
+            <div class="bottom">
+                <p></p>
+                <p></p>
+                <a href="" class="button"></a>
+            </div>
+        </div>
+    </div>
+   </section>
 </body>
 </html>
