section_join_modifiying

--- a/index.html
+++ b/index.html
@@ -174,18 +174,48 @@
                     <h2>Join our global community for exclusive benefits and news about</h2>
                 </div>
                 <div class="down">
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
+                    <div class="left_side">
+                        <img src="images/check.png" alt="">
+                        <img src="images/check.png" alt="">
+                        <img src="images/check.png" alt="">
+                        <img src="images/check.png" alt="">
+                        <img src="images/check.png" alt="">
+
+                    </div>
+                    <div class="right_side">
+                        <p>New & limited products</p>
+                        <p>Exclusive events</p>
+                        <p>Personalised content</p>
+                        <p>Special offers</p>
+                        <p>Behind the scenes</p>
+
+                    </div>
+                    
                 </div>
             </div>
-            <div class="middle"></div>
+            <div class="middle">
+                <div class="first">
+                    <span>Email(required)</span>
+                    <input type="email" name="email" required ="required">
+                </div>
+                <div class="second">
+                    <div class="left">
+                        <span>First name(required)</span>
+                        <input type="text" name="first_name" required ="required">
+                    </div>
+                    <div class="right-">
+                        <span >lastname(required)</span>
+                        <input type="text" name="last_name" required ="required">
+
+                    </div>
+                    
+                </div>
+
+            </div>
             <div class="bottom">
-                <p></p>
-                <p></p>
-                <a href="" class="button"></a>
+                <p>I accept that Bang & Olufsen can contact me via digital communication, including email with personalized marketing of our products and events in Bang & Olufsen shops. Unsubscribing is possible at any time. Details on how personal data is processed: <a href="">privacy policy.</a></p>
+                <p>This site is protected by reCAPTCHA and the <a href="">Google Privacy Policy</a> and <a href="">Terms of Service</a> apply.</p>
+                <a href="" class="button">subscribe</a>
             </div>
         </div>
     </div>
