section_join_completed

--- a/index.html
+++ b/index.html
@@ -199,12 +199,12 @@
                     <input type="email" name="email" required ="required">
                 </div>
                 <div class="second">
-                    <div class="left">
+                    <div class="left-">
                         <span>First name(required)</span>
                         <input type="text" name="first_name" required ="required">
                     </div>
                     <div class="right-">
-                        <span >lastname(required)</span>
+                        <span >last name(required)</span>
                         <input type="text" name="last_name" required ="required">
 
                     </div>
@@ -213,8 +213,8 @@
 
             </div>
             <div class="bottom">
-                <p>I accept that Bang & Olufsen can contact me via digital communication, including email with personalized marketing of our products and events in Bang & Olufsen shops. Unsubscribing is possible at any time. Details on how personal data is processed: <a href="">privacy policy.</a></p>
-                <p>This site is protected by reCAPTCHA and the <a href="">Google Privacy Policy</a> and <a href="">Terms of Service</a> apply.</p>
+                <p class="one">I accept that Bang & Olufsen can contact me via digital communication, including email with personalized marketing of our products and events in Bang & Olufsen shops. Unsubscribing is possible at any time. Details on how personal data is processed: <a href="">privacy policy.</a></p>
+                <p class="two">This site is protected by reCAPTCHA and the <a href="">Google Privacy Policy</a> and <a href="">Terms of Service</a> apply.</p>
                 <a href="" class="button">subscribe</a>
             </div>
         </div>
