--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/269fea6890.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
@@ -220,5 +221,34 @@
         </div>
     </div>
    </section>
+   <footer>
+    <div class="footer-container">
+        <div class="item">
+            <a href=""><h5>CUSTOMER CARE</h5></a>
+            <i class="fa-solid fa-angle-down" style="color: white;"></i>
+        </div>
+        <div class="item">
+            <a href=""><h5>OUR POLICIES</h5></a>
+            <i class="fa-solid fa-angle-down" style="color: white;"></i>
+        </div>
+        <div class="item">
+            <a href=""><h5>OUR COMPANY</h5></a>
+            <i class="fa-solid fa-angle-down" style="color: white;"></i>
+        </div>
+        <div class="item">
+            <a href=""><h5>internatinonal English</h5></a>
+            <i class="fa-solid fa-angle-down" style="color: white;"></i>
+        </div>
+        <div class="item">
+            <a href=""><h5>SOCIAL LINKS</h5></a>
+           <i class="fa-solid fa-angle-down" style="color: white;"></i>
+        </div>
+        <div class="item">
+            <a href=""><h5>DOWNLOAD OUR APPS</h5></a>
+            <i class="fa-solid fa-angle-down" style="color: white;"></i>
+        </div>
+    </div>
+    <p>© Bang & Olufsen 2023</p>
+   </footer>
 </body>
 </html>
