footer_updating_in js

--- a/index.html
+++ b/index.html
@@ -224,28 +224,61 @@
    <footer>
     <div class="footer-container">
         <div class="item">
-            <a href=""><h5>CUSTOMER CARE</h5></a>
-            <i class="fa-solid fa-angle-down" style="color: white;"></i>
+            <a href=""><h5>CUSTOMER CARE<i class="fa-solid fa-angle-down" style="color: white;"></i></h5></a>
+    
+            <ul>
+                <li><a href="">Exclusive online services</a></li>
+                <li><a href="">FAQ</a></li>
+                <li><a href="">Service and Support</a></li>
+                <li><a href="">Contact us</a></li>
+                <li><a href="">Find store</a></li>
+            </ul>
         </div>
         <div class="item">
-            <a href=""><h5>OUR POLICIES</h5></a>
-            <i class="fa-solid fa-angle-down" style="color: white;"></i>
+            <a href=""><h5>OUR POLICIES<i class="fa-solid fa-angle-down" style="color: white;"></i></h5></a>
+            <ul>
+                <li><a href="">Accessibility</a></li>
+                <li><a href="">Counterfeit</a></li>
+                <li><a href="">Cookie Settings</a></li>
+                <li><a href="">Cookie Policy</a></li>
+                <li><a href="">Privacy Policy</a></li>
+                <li><a href="">Policies and terms</a></li>
+            </ul>
         </div>
         <div class="item">
-            <a href=""><h5>OUR COMPANY</h5></a>
-            <i class="fa-solid fa-angle-down" style="color: white;"></i>
+            <a href=""><h5>OUR COMPANY<i class="fa-solid fa-angle-down" style="color: white;"></i></h5></a>
+            <ul>
+                <li><a href="">Corporate</a></li>
+                <li><a href="">Press</a></li>
+                <li><a href="">Sustainability</a></li>
+                <li><a href="">Investors</a></li>
+                <li><a href="">Become a sales partner</a></li>
+                <li><a href="">Custom Integration</a></li>
+                <li><a href="">Partners & B2B</a></li>
+                <li><a href="">Careers</a></li>
+                <li><a href="">Contact us</a></li>
+            </ul>
         </div>
         <div class="item">
-            <a href=""><h5>internatinonal English</h5></a>
-            <i class="fa-solid fa-angle-down" style="color: white;"></i>
+            <a href=""><h5>internatinonal English<i class="fa-solid fa-angle-down" style="color: white;"></i></h5></a>
         </div>
         <div class="item">
-            <a href=""><h5>SOCIAL LINKS</h5></a>
-           <i class="fa-solid fa-angle-down" style="color: white;"></i>
+            <a href=""><h5>SOCIAL LINKS<i class="fa-solid fa-angle-down" style="color: white;"></i></h5></a>
+            <ul>
+                <li><a href="">Facebook</a></li>
+                <li><a href="">Instagram</a></li>
+                <li><a href="">Twitter</a></li>
+                <li><a href="">Youtube</a></li>
+                <li><a href="">Pinterest</a></li>
+            </ul>
         </div>
         <div class="item">
-            <a href=""><h5>DOWNLOAD OUR APPS</h5></a>
-            <i class="fa-solid fa-angle-down" style="color: white;"></i>
+            <a href=""><h5>DOWNLOAD OUR APPS<i class="fa-solid fa-angle-down" style="color: white;"></i></h5></a>
+            <ul>
+                <li><a href="">Discover Bang & Olufsen apps</a></li>
+                <li><a href="">The House of Bang & Olufsen</a></li>
+                <li><a href="">Bang & Olufsen Collective</a></li>
+            </ul>
         </div>
     </div>
     <p>© Bang & Olufsen 2023</p>
