--- a/speaker.html
+++ b/speaker.html
@@ -86,7 +86,85 @@
             </div>
         </div>
     </section>
-    <section id="products"></section>
+    <!-- section speaker end''' -->
+
+
+    <section id="products">
+        <div class="container">
+            <div class="top">
+                <div class="first">
+                    <span>Home Audio</span>
+                    <p>17 Products</p>
+                </div>
+                <div class="second">
+                    <p>Spine-tingling sound at the touch of a button. High fidelity home audio brought to you by Bang & olufsen.... <a href="">Read More</a></p>
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="item">
+                    <div class="up">
+                        <img src="images/home_speaker1.webp" alt="">
+                    </div>
+                    <div class="down">
+                        <span class="one">BEOSOUND 2 FERRARI EDITION</span>
+                        <p>Powerful home speaker</p>
+                        <span class="two">$5,499  </span>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="up">
+                        <img src="images/Elegant_home_speaker_1.webp" alt="">
+                    </div>
+                    <div class="down">
+                        <span class="one">BEOSOUND 2</span>
+                        <p>Elegant home speaker</p>
+                        <span class="two">$3,199 </span>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="up">
+                        <img src="images/Powerful_minimalist_speaker_1.webp" alt="">
+                    </div>
+                    <div class="down">
+                        <span class="one">BEOSOUND A9</span>
+                        <p>Powerful, minimalist speaker</p>
+                        <span class="two">From $3,699</span>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="up">
+                        <img src="images/Compact_WiFi_home_speaker.webp" alt="">
+                    </div>
+                    <div class="down">
+                        <span class="one">BEOSOUND EMERGE</span>
+                        <p>Compact WiFi home speaker</p>
+                        <span class="two">From $699</span>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="up">
+                        <img src="images/Outstanding_living_room_speaker.webp" alt="">
+                    </div>
+                    <div class="down">
+                        <span class="one">BEOSOUND BALANCE</span>
+                        <p>Outstanding living room speaker</p>
+                        <span class="two">From $3,149</span>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="up">
+                        <img src="images/Portable_WiFi_Speaker.webp" alt="">
+                    </div>
+                    <div class="down">
+                        <span class="one">BEOSOUND LEVEL</span>
+                        <p>Portable WiFi Speaker</p>
+                        <span class="two">From $1,699</span>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
     <footer>
         <div class="footer-container">
             <div class="item">
