speaker_html_structure_completed

--- a/speaker.html
+++ b/speaker.html
@@ -165,6 +165,19 @@
             </div>
         </div>
     </section>
+    <section id="sign_up">
+        <div class="container">
+            <div class="top">
+                <img src="images/mail.png" alt="">
+            </div>
+            <div class="bottom">
+                <h5>JOIN THE HOUSE OF BANG & OLUFSEN</h5>
+                <p>Enjoy new and limited products, exclusive events, special offers and much <br> more before anyone else.</p>
+                <a href="" class="button">Sign up now</a>
+            </div>
+
+        </div>
+    </section>
     <footer>
         <div class="footer-container">
             <div class="item">
@@ -227,6 +240,6 @@
         </div>
         <p>© Bang & Olufsen 2023</p>
        </footer>
-    
+    <script src="index.js"></script>
 </body>
 </html>
