--- a/index.html
+++ b/index.html
@@ -57,12 +57,16 @@
             </div>
         </div>
     </section>
+    <!-- section main end''' -->
+
    <section id="gift">
     <div class="container">
         <h2>The Gift of Music</h2>
         <a href="" class="button">Discover more</a>
     </div>
    </section>
+   <!-- section gift end''' -->
+   
    <section id="sound">
     <div class="container">
       <div class="image_container">
@@ -84,6 +88,7 @@
     </div>
    </section>
    <!-- SECTION#SOUND END''''' -->
+
    <section id="features">
     <div class="top">
         <h5>BANG & OLUFSEN</h5>
@@ -221,6 +226,9 @@
         </div>
     </div>
    </section>
+
+   <!-- section join end''''' -->
+
    <footer>
     <div class="footer-container">
         <div class="item" data-id="first">
