--- a/speaker.html
+++ b/speaker.html
@@ -105,9 +105,18 @@
             </div>
             <div class="bottom">
                 <div class="item">
-                    <div class="up">
-                        <img src="images/home_speaker1.webp" alt="">
-                        <img src="images/Elegant_home_speaker_1.webp" alt="">
+                    <div id="slider1" class="slideshow-container">
+                        <div class="up mySlides fade">
+                            <img src="images/home_speaker1.webp" alt="">
+                        </div>
+                        <div class="up mySlides fade">
+                            <img src="images/home_speaker_2.webp" alt="">
+                        </div>
+                        <div class="up mySlides fade">
+                            <img src="images/home_speaker_3.webp" alt="">
+                        </div>
+                        <a class="prev" onclick="plusSlides(-1, 'slider1')">&#10094;</a>
+                        <a class="next" onclick="plusSlides(1,'slider1')">&#10095;</a>
                     </div>
                     <div class="down">
                         <span class="one">BEOSOUND 2 FERRARI EDITION</span>
@@ -116,8 +125,21 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div class="up">
-                        <img src="images/Elegant_home_speaker_1.webp" alt="">
+                    <div id="slider2" class="slideshow-container">
+                        <div class="up mySlides fade">
+                            <img src="images/Elegant_home_speaker_1.webp" alt="">
+                        </div>
+                        <div class="up mySlides fade">
+                            <img src="images/Elegant_home_speaker_2.webp" alt="">
+                        </div>
+                        <div class="up mySlides fade">
+                            <img src="images/Elegant_home_speaker_3.webp" alt="">
+                        </div>
+                        <div class="up mySlides fade">
+                            <img src="images/Elegant_home_speaker_4.webp" alt="">
+                        </div>
+                        <a class="prev" onclick="plusSlides(-1,'slider2')">&#10094;</a>
+                        <a class="next" onclick="plusSlides(1,'slider2')">&#10095;</a>
                     </div>
                     <div class="down">
                         <span class="one">BEOSOUND 2</span>
@@ -126,8 +148,21 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div class="up">
-                        <img src="images/Powerful_minimalist_speaker_1.webp" alt="">
+                    <div id="slider3" class="slideshow-container">
+                        <div class="up mySlides fade">
+                            <img src="images/Powerful_minimalist_speaker_1.webp" alt="">
+                        </div>
+                        <div class="up mySlides fade">
+                            <img src="images/Powerful_minimalist_speaker_2.webp" alt="">
+                        </div>
+                        <div class="up mySlides fade">
+                            <img src="images/Powerful_minimalist_speaker_3.webp" alt="">
+                        </div>
+                        <div class="up mySlides fade">
+                            <img src="images/Powerful_minimalist_speaker_4.webp" alt="">
+                        </div>
+                        <a class="prev" onclick="plusSlides(-1,'slider3')">&#10094;</a>
+                        <a class="next" onclick="plusSlides(1,'slider3')">&#10095;</a>
                     </div>
                     <div class="down">
                         <span class="one">BEOSOUND A9</span>
