--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <ul>
                         <li><a href=""><img src="images/icons/user.png" alt=""></a></li>
                         <li><a href=""><img src="images/icons/icon_location.png" alt=""></a></li>
-                        <li><a href=""><img src="images/icons/bag_2662503.png" alt=""></a></li>
+                        <li><a href="cart.html"><img src="images/icons/bag_2662503.png" alt=""></a></li>
 
                     </ul>
                 </div>
