--- a/speaker.html
+++ b/speaker.html
@@ -100,7 +100,11 @@
                     <p>17 Products</p>
                 </div>
                 <div class="second">
-                    <p>Spine-tingling sound at the touch of a button. High fidelity home audio brought to you by Bang & olufsen.... <a href="">Read More</a></p>
+                    <p class="one">Spine-tingling sound at the touch of a button. High fidelity home audio brought to you by Bang & olufsen<a href="" class="read-more">.... Read More</a></p>
+                    <p class="two hidden">Soul-stirring sound wherever you want it. Pick up a portable speaker for your next adventure, furnish your home with a full entertainment setup or find the flexible Bang & Olufsen speaker that matches your busy lifestyle.
+                        Designed to fit into your day-to-day, our speakers are easy to control. From changing the volume to setting up your own sound profile, our intuitive interfaces ensure your interactions are joyful. You can also make every moment your own, with our app – skip tracks, take calls or change your listening mode, all from your phone or tablet. 
+                        Our portable speakers and home audio speakers have solid WiFi and Bluetooth connections, for uninterrupted pleasure. They can also wirelessly link to each other, for a fully connected home or an outdoor party with portable speakers playing together. Add a soundbar to the mix for thrilling home entertainment. Explore our speaker sets to find your match.
+                        High fidelity sound every time, our engineers ensure it. Active speakers with built in amplifiers are as practical as they are powerful. They’re designed to work beautifully alone or together – and to make sure your home interiors look good while doing it.</p>
                 </div>
             </div>
             <div class="bottom">
